--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sessão</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../page-valorant-login/CSS/styles.css">
     <link rel="stylesheet" type="text/css" href="fontawesome-free-6.1.2-web/css/all.min.css">
 </head>
 <body>
@@ -65,7 +65,7 @@
 
  </section>
 
- <script src="../scripts/scripts.js"></script>
+ <script src="../page-valorant-login/scripts/scripts.js"></script>
 
 </body>
 </html>
