--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sessão</title>
-    <link rel="stylesheet" href="../page-valorant-login/CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css"">
     <link rel="stylesheet" type="text/css" href="fontawesome-free-6.1.2-web/css/all.min.css">
 </head>
 <body>
     <div class="logo">
-        <img src="../css/img/riot-games-256.png" alt="" style="width:150px ;" height="auto">
+        <img src="./CSS/img/riot-games-256.png" alt="" style="width:150px ;" height="auto">
     </div>
  <section>
     
@@ -30,15 +30,15 @@
 
        <div class="login-social">
             <button  type="button" class="icon-button">
-                <img src="../css/img/facebook-icon.png" alt="facebook">
+                <img src="./CSS/img/facebook-icon.png" alt="facebook">
             </button>
 
             <button  type="button" class="icon-button">
-                <img src="../css/img/google-icon.png" alt="google">
+                <img src="./CSS/img/google-icon.png" alt="google">
             </button>
 
             <button  type="button" class="icon-button">
-                <img src="../css/img/apple-icon.png" alt="apple">
+                <img src="./CSS/img/apple-icon.png" alt="apple">
             </button>
         </div>
 
@@ -65,7 +65,7 @@
 
  </section>
 
- <script src="../page-valorant-login/scripts/scripts.js"></script>
+ <script src="./scripts/scripts.js"></script>
 
 </body>
 </html>
